--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@ form button:hover {
 }
 
 .buttons-container {
-  display: flex;
+  display: center;
   gap: 10px; 
   margin-top: 20px; 
 }
@@ -83,6 +83,7 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  margin: 0.5em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -95,6 +96,7 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  margin: 0.5em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
